# cp

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
atcoder/abc002/d/: Main.java  test.sh
atcoder/abc007/c/: Main.java  test.sh
atcoder/abc010/c/: main.cpp  test.sh
atcoder/abc012/d/: main.cpp  test.sh
atcoder/abc014/c/: main.cpp  test.sh
atcoder/abc022/b/: main.cpp  test.sh
atcoder/abc023/d/: Main.java  test.sh
atcoder/abc034/c/: main.cpp  test.sh
atcoder/abc042/d/: main.cpp  test.sh
atcoder/abc045/d/: main.cpp  test.sh
atcoder/abc047/d/: main.cpp  test.sh
atcoder/abc051/d/: main.cpp  test.sh
atcoder/abc052/d/: Main.java  test.sh
atcoder/abc053/d/: Main.java  test.sh
atcoder/abc054/d/: main.cpp  test.sh
atcoder/abc057/d/: main.cpp  test.sh
atcoder/abc063/d/: main.cpp  test.sh
atcoder/abc064/d/: main.cpp  test.sh
atcoder/abc066/d/: main.cpp  test.sh
atcoder/abc069/d/: Main.java  test.sh
atcoder/abc070/d/: main.cpp  test.sh
atcoder/abc071/d/: Main.java  test.sh
cpp/template/: Makefile  main.cpp  test.sh
java/template/: Main.java  Makefile  test.sh
lib/binary_search/: Makefile  main.cpp
lib/combination/: main.cpp
lib/dijkstra/: main.cpp
lib/is_prime/: main.cpp
lib/kruskal/: main.cpp
lib/mod_inv/: main.cpp
lib/mod_minus/: main.cpp
lib/precision/: main.cpp
lib/prime_factor/: main.cpp
lib/segment_tree/: main.cpp
template/: main.cpp
template/java/: README.md
template/leet_py/: README.md
tools/: search_wa_input.go
virtual_contest/test_contest_01/: main.cpp  test.sh
(+713 files in other folders)
